Repair text and responsive socials.

--- a/style.scss
+++ b/style.scss
@@ -250,5 +250,11 @@ ul {
 		margin-left: 3.125em; /* 50/16 */
 		margin-right: 3.125em; /* 50/16 */
 	}
+
+	.socials {
+		img {
+			margin-bottom: 1.5625em; /* 25/16 */
+		}
+	}
 }
 
