--- a/style.css
+++ b/style.css
@@ -249,6 +249,9 @@ ul {
     margin-left: 3.125em;
     /* 50/16 */
     margin-right: 3.125em;
-    /* 50/16 */ } }
+    /* 50/16 */ }
+  .socials img {
+    margin-bottom: 1.5625em;
+    /* 25/16 */ } }
 
 /*# sourceMappingURL=style.css.map */
